# aoc

./: .gitignore  Cargo.toml
2017/day_01/: Cargo.toml
2017/day_01/src/: error.rs  main.rs  unit_tests.rs
2017/day_01/src/consts/en_us/: msg.rs
2017/day_02/: Cargo.toml  rename_project
2017/day_02/src/: error.rs  lib.rs  main.rs  spreadsheet.rs
2017/day_02/src/consts/: en_us.rs
2017/day_02/src/unit_tests/: mod.rs
2017/day_02/src/unit_tests/spreadsheet/: checksum.rs  find_evenly_divisible.rs  mod.rs  new.rs
2018/day_01/: Cargo.toml
2018/day_01/src/: device.rs  error.rs  main.rs
2018/day_01/src/unit_tests/: part_1.rs  part_2.rs
2018/day_01a/: Cargo.toml
2018/day_01a/src/: error.rs  lib.rs  main.rs  unit_tests.rs
2018/day_01a/src/consts/msg/: en_us.rs
2018/day_01a/src/error/: wrapped.rs
2018/day_01b/: Cargo.toml
2018/day_01b/src/: error.rs  lib.rs  main.rs  time_device.rs  unit_tests.rs
2018/day_01b/src/consts/msg/: en_us.rs
2018/day_01b/src/time_device/: unit_tests.rs
2018/day_02/: Cargo.toml
2018/day_02/src/: device.rs  main.rs  unit_tests.rs
2018/day_02/src/error/: wrapped.rs
2018/day_02a/: Cargo.toml
2018/day_02a/src/: lib.rs  main.rs  unit_tests.rs
